--- a/package.json
+++ b/package.json
@@ -18,19 +18,14 @@
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "^2.6.3",
     "sass": "^1.32.13",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
